src/css/jquery-weui.css
.preloader {
  width: 20px;
  height: 20px;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: preloader-spin 1s steps(12, end) infinite;
          animation: preloader-spin 1s steps(12, end) infinite;
}
.preloader:after {
  display: block;
  width: 100%;
  height: 100%;
  content: "";
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D'0%200%20120%20120'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20xmlns%3Axlink%3D'http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink'%3E%3Cdefs%3E%3Cline%20id%3D'l'%20x1%3D'60'%20x2%3D'60'%20y1%3D'7'%20y2%3D'27'%20stroke%3D'%236c6c6c'%20stroke-width%3D'11'%20stroke-linecap%3D'round'%2F%3E%3C%2Fdefs%3E%3Cg%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(30%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(60%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(90%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(120%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(150%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.37'%20transform%3D'rotate(180%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.46'%20transform%3D'rotate(210%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.56'%20transform%3D'rotate(240%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.66'%20transform%3D'rotate(270%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.75'%20transform%3D'rotate(300%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.85'%20transform%3D'rotate(330%2060%2C60)'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: 100%;
}
@-webkit-keyframes preloader-spin {
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}
@keyframes preloader-spin {
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}
.weui_dialog,
.weui_toast {
  -webkit-transition-duration: .3s;
          transition-duration: .3s;
  opacity: 0;
  -webkit-transform: scale(0.9);
          transform: scale(0.9);
  visibility: hidden;
  margin: 0;
  left: 7.5%;
  top: 30%;
}
.weui_dialog .weui_btn_dialog + .weui_btn_dialog,
.weui_toast .weui_btn_dialog + .weui_btn_dialog {
  position: relative;
}
.weui_dialog .weui_btn_dialog + .weui_btn_dialog:after,
.weui_toast .weui_btn_dialog + .weui_btn_dialog:after {
  content: " ";
  position: absolute;
  left: 0;
  top: 0;
  width: 1px;
  height: 100%;
  border-left: 1px solid #D5D5D6;
  color: #D5D5D6;
  -webkit-transform-origin: 0 0;
          transform-origin: 0 0;
  -webkit-transform: scaleX(0.5);
          transform: scaleX(0.5);
}
.weui_dialog.weui_dialog_visible,
.weui_toast.weui_dialog_visible,
.weui_dialog.weui_toast_visible,
.weui_toast.weui_toast_visible {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
          transform: scale(1);
}
.weui_toast {
  left: 50%;
  top: 35%;
  margin-left: -3.8rem;
}
.weui_mask {
  opacity: 0;
  -webkit-transition-duration: .3s;
          transition-duration: .3s;
  visibility: hidden;
}
.weui_mask.weui_mask_visible {
  opacity: 1;
  visibility: visible;
}
.weui_toast {
  left: 50%;
  margin-left: -3.8rem;
  top: 35%;
}
.weui-pull-to-refresh {
  margin-top: -50px;
  -webkit-transition: -webkit-transform .4s;
  transition: -webkit-transform .4s;
  transition: transform .4s;
  transition: transform .4s, -webkit-transform .4s;
}
.weui-pull-to-refresh.refreshing {
  -webkit-transform: translate3d(0, 50px, 0);
          transform: translate3d(0, 50px, 0);
}
.weui-pull-to-refresh.touching {
  -webkit-transition-duration: 0s;
          transition-duration: 0s;
}
.weui-pull-to-refresh-layer {
  height: 30px;
  line-height: 30px;
  padding: 10px;
  text-align: center;
}
.weui-pull-to-refresh-layer .down {
  display: inline-block;
}
.weui-pull-to-refresh-layer .up,
.weui-pull-to-refresh-layer .refresh {
  display: none;
}
.weui-pull-to-refresh-layer .pull-to-refresh-arrow {
  display: inline-block;
  z-index: 10;
  width: 20px;
  height: 20px;
  margin-right: 4px;
  vertical-align: -4px;
  background: no-repeat center;
  background-size: 13px 20px;
  -webkit-transition-duration: 300ms;
          transition-duration: 300ms;
  -webkit-transform: rotate(0deg) translate3d(0, 0, 0);
          transform: rotate(0deg) translate3d(0, 0, 0);
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2026%2040'%3E%3Cpolygon%20points%3D'9%2C22%209%2C0%2017%2C0%2017%2C22%2026%2C22%2013.5%2C40%200%2C22'%20fill%3D'%238c8c8c'%2F%3E%3C%2Fsvg%3E");
}
.weui-pull-to-refresh-layer .pull-to-refresh-preloader {
  display: none;
  vertical-align: -4px;
  margin-right: 4px;
  width: 20px;
  height: 20px;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: preloader-spin 1s steps(12, end) infinite;
          animation: preloader-spin 1s steps(12, end) infinite;
}
.weui-pull-to-refresh-layer .pull-to-refresh-preloader:after {
  display: block;
  width: 100%;
  height: 100%;
  content: "";
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D'0%200%20120%20120'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20xmlns%3Axlink%3D'http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink'%3E%3Cdefs%3E%3Cline%20id%3D'l'%20x1%3D'60'%20x2%3D'60'%20y1%3D'7'%20y2%3D'27'%20stroke%3D'%236c6c6c'%20stroke-width%3D'11'%20stroke-linecap%3D'round'%2F%3E%3C%2Fdefs%3E%3Cg%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(30%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(60%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(90%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(120%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(150%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.37'%20transform%3D'rotate(180%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.46'%20transform%3D'rotate(210%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.56'%20transform%3D'rotate(240%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.66'%20transform%3D'rotate(270%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.75'%20transform%3D'rotate(300%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.85'%20transform%3D'rotate(330%2060%2C60)'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: 100%;
}
.pull-up .weui-pull-to-refresh-layer .down,
.refreshing .weui-pull-to-refresh-layer .down {
  display: none;
}
.pull-up .weui-pull-to-refresh-layer .pull-to-refresh-arrow {
  display: inline-block;
  -webkit-transform: rotate(180deg) translate3d(0, 0, 0);
          transform: rotate(180deg) translate3d(0, 0, 0);
}
.pull-up .weui-pull-to-refresh-layer .up {
  display: inline-block;
}
.pull-down .weui-pull-to-refresh-layer .pull-to-refresh-arrow {
  display: inline-block;
}
.pull-down .weui-pull-to-refresh-layer .down {
  display: inline-block;
}
.refreshing .weui-pull-to-refresh-layer .pull-to-refresh-arrow {
  display: none;
}
.refreshing .weui-pull-to-refresh-layer .pull-to-refresh-preloader {
  display: inline-block;
}
.refreshing .weui-pull-to-refresh-layer .refresh {
  display: inline-block;
}
@keyframes preloader-spin {
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}
.weui-infinite-scroll {
  height: 24px;
  line-height: 24px;
  padding: 10px;
  text-align: center;
}
.weui-infinite-scroll .infinite-preloader {
  display: inline-block;
  margin-right: 4px;
  vertical-align: -4px;
  width: 20px;
  height: 20px;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: preloader-spin 1s steps(12, end) infinite;
          animation: preloader-spin 1s steps(12, end) infinite;
}
.weui-infinite-scroll .infinite-preloader:after {
  display: block;
  width: 100%;
  height: 100%;
  content: "";
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D'0%200%20120%20120'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20xmlns%3Axlink%3D'http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink'%3E%3Cdefs%3E%3Cline%20id%3D'l'%20x1%3D'60'%20x2%3D'60'%20y1%3D'7'%20y2%3D'27'%20stroke%3D'%236c6c6c'%20stroke-width%3D'11'%20stroke-linecap%3D'round'%2F%3E%3C%2Fdefs%3E%3Cg%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(30%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(60%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(90%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(120%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.27'%20transform%3D'rotate(150%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.37'%20transform%3D'rotate(180%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.46'%20transform%3D'rotate(210%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.56'%20transform%3D'rotate(240%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.66'%20transform%3D'rotate(270%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.75'%20transform%3D'rotate(300%2060%2C60)'%2F%3E%3Cuse%20xlink%3Ahref%3D'%23l'%20opacity%3D'.85'%20transform%3D'rotate(330%2060%2C60)'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: 100%;
}

/*public css style*/
body{
  font-size: 12px;
  background-color: #EBEBEB;
}
.fl{
  float: left;
}
.fr{
  float: right;
}
.clearfix:before,
.clearfix:after {
  display: table;
  content: " ";
}

.clearfix:after {
  clear: both;
}
/*澶撮儴褰╂潯css*/
.top-head{
  line-height: 40px;
  background:#1FB5AC;
  text-align: center;
}
.top-head span{
  display: block;
}
.font-c{
  float: left;
  font-size: 18px;
  width: 80%;
  text-align: center;
  height: 40px;
  color: white;
}
.top-fl{
  text-align: left;
  float: left;
  width: 10%
}
.top-fr{
  float: right;
  width: 10%;
  text-align: right;
}
.back-white{
  vertical-align: middle;
  margin-top: -4px;
  padding-left: 5px;
  width: 20px;
  height: 20px;
}

.menu-white{
      position: relative;
  vertical-align: middle;
  width: 30px;
  height: 30px;
}
.top-menu-list{
    position: absolute;
    left: -67px;
    top: 110%;
    width: 92px;
    list-style: none;
    background: #1FB5AC;
    text-align: center;
    font-size: 0.9rem;
}
.top-menu-list a{
    color: #ffffff;
    text-underline: none;
}
.top-menu-list>li{
    border-bottom: 1px solid #3EC6BD;
    padding: 0.3rem;
    line-height: 25px;
}
.top-trig{
    display: block;
    width: 0;
    height: 0;
    position: absolute;
    left: 10px;
    top: 90%;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-bottom: 10px solid #3EC6BD;
}
.top-icon-menu{
    float: right;
    position: relative;
    font-style: normal;
}
.top-head.top-head-second{
  background:#95B85E;
}
.hide{
  display: none!important;
}

/*end public css style*/

